# paperback

./: .clang-format  .clang-tidy  .envrc  .gitignore  .gitmodules  CMakeLists.txt  CNAME  Cargo.toml  MasteringNim.epub  README.md  build.rs  claude.md  dev.paperback.Paperback.yaml  dev.paperback.desktop.yaml  flake.nix  fmt.bat  index.html  io.github.trypsynth.Paperback.yaml  manual.doc  paperback.desktop  paperback.iss  paperback.iss.in  prek.toml  readme.html  renovate.json  vcpkg.json
.cargo/: config.toml
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  site.yml  translation-check.yml
android/: .editorconfig  .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
app/: app.cpp  app.hpp  config_manager.cpp  config_manager.hpp  constants.hpp  controls.cpp  controls.hpp  dialogs.cpp  dialogs.hpp  document_data.hpp  document_manager.cpp  document_manager.hpp  live_region.cpp  live_region.hpp  main_window.cpp  main_window.hpp  menu_builder.hpp  paperback.rc  parser.cpp  parser.hpp  table_dialog.cpp  task_bar_icon.cpp  task_bar_icon.hpp  translation_manager.cpp  translation_manager.hpp  utils.cpp  utils.hpp  version.h  version.h.in
crates/paperback/: Cargo.toml  build.rs
crates/paperback-core/: Cargo.toml  build.rs  uniffi.toml
crates/paperback-core/src/: config.rs  document.rs  export.rs  ffi_config.rs  lib.rs  paperback.udl  parser.rs  reader_core.rs  session.rs  types.rs  update.rs  version.rs
crates/paperback-core/src/export/: epub_direct.rs  html.rs  markdown.rs
crates/paperback-core/src/parser/: chm.rs  daisy.rs  epub.rs  fb2.rs  html.rs  html_to_text.rs  markdown.rs  mobi.rs  odp.rs  odt.rs  pdf.rs  powerpoint.rs  rtf.rs  table_text.rs  util.rs  word.rs  xml_to_text.rs
crates/paperback-core/src/parser/util/: bidi.rs  ooxml.rs  path.rs  toc.rs  xml.rs
crates/paperback-core/src/util/: text.rs  zip.rs
crates/paperback/po/: paperback.pot
crates/paperback/src/: accessibility.rs  config_ext.rs  ipc.rs  legacy_config.rs  logging.rs  main.rs  translation_manager.rs  ui.rs  update.rs  wx_translation_loader.rs
crates/paperback/src/ui/: app.rs  dialogs.rs  document_manager.rs  find.rs  help.rs  main_window.rs  menu.rs  menu_ids.rs  navigation.rs  rtf_write.rs  sounds.rs  status.rs  tray.rs
crates/paperback/src/ui/dialogs/: about.rs  accessible_tree.rs  all_documents.rs  bookmark.rs  document_info.rs  elements.rs  elements_gtk.rs  go_to_line.rs  go_to_page.rs  go_to_percent.rs  note_entry.rs  open_as.rs  options.rs  sleep_timer.rs  toc.rs  toc_gtk.rs  update.rs  view_note.rs  web_view.rs  word_count.rs
crates/pb/: Cargo.toml
crates/pb/src/: cli.rs  html.rs  main.rs  markdown.rs  util.rs
crates/ship-shape/: Cargo.toml
crates/ship-shape/src/: lib.rs  ui.rs
crates/xtask/: Cargo.toml
doc/: index.md  pandoc.yaml  readme-bs.md  readme-cs.md  readme-fi.md  readme-nl.md  readme-pl.md  readme-sr.md  readme.md  translating.md
downloads/: index.html
include/: UniversalSpeech.h
ios/: ExportOptions.plist
ios/Paperback/: AccessibilityHelpers.swift  AppViewModel.swift  ContentView.swift  DocumentInfoSheet.swift  DocumentMenu.swift  DocumentTab.swift  ElementsSheet.swift  EmptyStateView.swift  GoToSheet.swift  Info.plist  PaperbackApp.swift  PaperbackApplication.swift  PaperbackBridgingHeader.h  PasswordSheet.swift  ReaderView.swift  RecentDocumentsSheet.swift  SearchControlBar.swift  SettingsSheet.swift  SleepTimerSheet.swift  TabStripView.swift  TabsMenu.swift  TextModeView.swift  TocSheet.swift  Translations.swift  TtsConfigSheet.swift  TtsControlBar.swift  TtsManager.swift  TtsModeView.swift  WordCountSheet.swift
ios/Paperback.xcodeproj/: project.pbxproj
js/: downloads.js
lib/: Cargo.toml  UniversalSpeechStatic.lib  build.rs  rustfmt.toml
lib/src/: bridge.rs  chmlib.rs  config.rs  document.rs  html_to_text.rs  lib.rs  markdown_to_text.rs  parser.rs  pdfium.rs  reader_core.rs  session.rs  update.rs  utils.rs  xml_to_text.rs
lib/src/parser/: chm.rs  docx.rs  epub.rs  fb2.rs  html.rs  markdown.rs  mod.rs  odp.rs  odt.rs  pptx.rs  text.rs  utils.rs
lib/src/utils/: encoding.rs  text.rs  zip.rs
po/: README.md  bs.po  cs.po  de.po  es.po  fi.po  fr.po  ja.po  nl.po  paperback.pot  pl.po  pt_br.po  ru.po  sr.mo  sr.po  vi.po  zh_CN.po
ports/universalspeech/: portfile.cmake  universalspeech-config.cmake.in  vcpkg.json
privacy/: index.html
scripts/: sign-release.ps1
src/: app.cpp  app.hpp  bridge.rs  chm_parser.cpp  chm_parser.hpp  config.rs  config_manager.cpp  config_manager.hpp  constants.hpp  controls.cpp  controls.hpp  dialogs.cpp  dialogs.hpp  document.cpp  document.hpp  document.rs  document_buffer.cpp  document_buffer.hpp  document_info_dialog.cpp  document_info_dialog.hpp  document_manager.cpp  document_manager.hpp  docx_parser.cpp  docx_parser.hpp  encoding.rs  epub.cpp  epub.hpp  epub_parser.cpp  epub_parser.hpp  fb2_parser.cpp  fb2_parser.hpp  find_dialog.cpp  find_dialog.hpp  go_to_dialog.cpp  go_to_dialog.hpp  go_to_line_dialog.cpp  go_to_line_dialog.hpp  go_to_page_dialog.cpp  go_to_page_dialog.hpp  html_parser.cpp  (+57 more)
src/parser/: chm.rs  daisy.rs  docx.rs  epub.rs  fb2.rs  html.rs  html_to_text.rs  markdown.rs  mobi.rs  odp.rs  odt.rs  ooxml.rs  path.rs  pdf.rs  powerpoint.rs  pptx.rs  rtf.rs  text.rs  toc.rs  util.rs  utils.rs  word.rs  xml.rs  xml_doc.rs  xml_to_text.rs
src/ui/: accessibility.rs  app.rs  dialogs.rs  document_manager.rs  find.rs  help.rs  main_window.rs  menu.rs  menu_ids.rs  mod.rs  navigation.rs  status.rs  tray.rs  utils.rs
src/util/: encoding.rs
src/utils/: encoding.rs
translations/: index.html
vcpkg/: update_baseline.bat  vcpkg-configuration.json  vcpkg.json
vcpkg/triplets/: x64-linux.cmake  x64-windows-static.cmake
web/: _cobalt.yml  downloads.md  index.md  privacy.md  translations.md
web/_defaults/: pages.md
web/_includes/: footer.liquid  header.liquid
web/_layouts/: default.liquid
web/js/: downloads.js
xtask/: Cargo.toml
(+118 files in other folders)
