[workspace]
members = ["crates/paperback", "crates/paperback-core", "crates/pb", "crates/xtask"]
resolver = "2"

[workspace.package]
version = "0.8.5"
edition = "2024"
rust-version = "1.91.1"
license = "MIT"
repository = "https://github.com/trypsynth/paperback"

# Deps shared by two or more crates in this workspace.
[workspace.dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
rstest = "0.26.1"
toml = "1.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[patch.crates-io]
wxdragon = { git = "https://github.com/trypsynth/wxDragon", branch = "macos-accessibility-label" }
