[package]
name = "paperback-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core document parsing and reading logic for Paperback"

[lib]
name = "paperback_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
uniffi = { version = "0.31.1", features = ["cli"] }
thiserror = "2.0.18"
anyhow = { workspace = true }
base64 = { workspace = true }
bitflags = "2.11.1"
toml = { workspace = true }
cfb = "0.14.0"
ego-tree = "0.11.0"
encoding_rs = "0.8.35"
libchm = "0.1.3"
office-crypto = "0.2.0"
percent-encoding = "2.3.2"
pulldown-cmark = { version = "0.13.4", default-features = false, features = ["html"] }
regex = "1.12.3"
roman = "0.1"
roxmltree = "0.21.1"
rtf-parser = "0.4.2"
scraper = "0.27.0"
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
sha1 = "0.11.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
pdfium = "0.10.4"

[dev-dependencies]
rstest = { workspace = true }

[build-dependencies]
uniffi = { version = "0.31.1", features = ["build"] }
