[package]
name = "paperback-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core document parsing and reading logic for Paperback"

[lib]
name = "paperback_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bitflags = "2.12.1"
cfb = "0.14.0"
ego-tree = "0.11.0"
encoding_rs = "0.8.35"
libchm = "0.2.0"
office-crypto = "0.2.0"
pdfium = "0.10.4"
percent-encoding = "2.3.2"
pulldown-cmark = { version = "0.13.4", default-features = false, features = ["html"] }
regex = "1.12.3"
roman = "0.2"
roxmltree = "0.21.1"
rtf-parser = "0.4.2"
scraper = "0.27.0"
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
sha1 = "0.11.0"
thiserror = "2.0.18"
toml = { workspace = true }
uniffi = { version = "0.31.1", features = ["cli"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[build-dependencies]
uniffi = { version = "0.31.1", features = ["build"] }

[dev-dependencies]
rstest = { workspace = true }
