[package]
name = "paperback"
description = "An accessible, light-weight, fast ebook and document reader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bitflags = "2.11.1"
live-region = "0.1.4"
paperback-core = { path = "../paperback-core" }
ship-shape = { version = "0.1.1", features = ["ui"] }
toml = { workspace = true }
wx-utils = "0.1.0"
wxdragon = { version = "0.9.16", features = ["webview"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_Accessibility", "Win32_System_Com", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Ole", "Win32_System_Variant", "Win32_UI_Controls_RichEdit", "Win32_Graphics_Gdi", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes"] }

[build-dependencies]
embed-manifest = "1.5.0"
flate2 = { version = "1.1.9", default-features = false }
tar = "0.4.45"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
winres = "0.1.12"

[dev-dependencies]
rstest = { workspace = true }
