[package]
name = "paperback"
description = "An accessible, light-weight, fast ebook and document reader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.patois]
translatable = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bitflags = "2.13.0"
live-region = "0.1.4"
paperback-core = { path = "../paperback-core" }
patois = { git = "https://github.com/trypsynth/patois.git", features = ["wx"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ship-shape = "0.1.5"
toml = { workspace = true }
wx-utils = "0.1.1"
wxdragon = { version = "0.9.17", features = ["webview"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_Accessibility", "Win32_System_Com", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Ole", "Win32_System_Variant", "Win32_UI_Controls_RichEdit", "Win32_Graphics_Gdi", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

[lints.rust]
# `objc`'s `msg_send!` macro expands to a `cfg(feature = "cargo-clippy")` check.
# This is not a feature that this crate defines and the Rust compiler understands, so a warning would normally be generated.
# When using macros from older crates (written before this compiler check
# existed) that rely on this feature, such warnings must be suppressed.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[build-dependencies]
embed-manifest = "1.5.0"
flate2 = { version = "1.1.9", default-features = false }
patois-build = "0.1.3"
tar = "0.4.46"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
winres = "0.1.12"

[dev-dependencies]
rstest = { workspace = true }
