[package]
name = "pb"
description = "Command-line tool to convert documents to text or HTML using Paperback's parsers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.6.4", features = ["derive"] }
paperback-core = { path = "../paperback-core" }
rpassword = "7.5.4"
