[package]
name = "ship-shape"
version = "0.1.4"
edition = "2024"
description = "Universal auto-updater for wxDragon desktop apps"
license = "MIT"
repository = "https://github.com/trypsynth/ship-shape"
publish = false

[package.metadata.patois]
translatable = true

[dependencies]
minisign-verify = "0.2.5"
patois = "0.1.0"
pulldown-cmark = { version = "0.13", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
ureq = { version = "3.3.0", default-features = false, features = ["json", "rustls"] }
wxdragon = "0.9.16"
